@startuml
skinparam monochrome true
skinparam packageStyle rectangle
skinparam shadowing false
skinparam linetype polyline

'left to right direction

hide circle
hide methods

title US019 - Domain Model
class Address{
streetAddress
zipCode
}

class State{
stateName
}

class District{
districtName
}

class City{
cityName
}


class Employee{
name
emailAddress
phoneNumber
}

class Order{
orderPrice
date
orderNumber
decision
}

class Announcement{
comissionType
comission
date
}

class Client{
}

class Property{
area
price
distanceFromCityCenter
propertyType
photographList
}

class Store{
designation
phoneNumber
emailAddress
ID
}

class Address{
streetAddress
doorNumber
floorNumber
zipCode
}

class State{
stateName
}

class District{
districtName
}

class City{
cityName
}

class NetworkManager{
}

class Employee{
name
emailAddress
phoneNumber
}

class Residence{
numberOfBedrooms
numberOfBathrooms
numberOfParkingSpaces
availableEquipment
}

class House{
existenceOfABasement
inhabitableLoft
}

Residence --|> Property
House --|> Residence

Store "1" -- Address : has >
Address -- "1" City : has >
City -- "1" District : is in >
District -- "1" State : is in >
NetworkManager --- "1...*" Order : analyzes the \nperformance of >
NetworkManager --|> Employee : is >
NetworkManager "1" --- "1...*" Store : manages >
Property -- Address : has >
Order -- "1" Announcement : on >
Announcement -- "1" Property : announces >
Client -- Order : makes >
Client -- Address : has >

@enduml